Chore: update pyproject to reflect test path

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,9 @@ ignore = [
     "ANN101",
     "ANN102",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+addopts = [
+    "--import-mode=importlib",
+]
