--- a/DockerfileWeb
+++ b/DockerfileWeb
@@ -1,6 +1,6 @@
 FROM python:3.12.4-alpine3.20
 
-RUN apk add --no-cache bash coreutils
+RUN apk add --no-cache bash coreutils postgresql gcc libpq-dev python3-dev
 
 COPY . .
 
@@ -8,5 +8,4 @@ COPY . .
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip3 install -r requirements-dev.txt
 
-# TODO: Add entry path
-# CMD ["python", "samples/test.py"]
+CMD ["gunicorn", "src.webapp.webapp:app"]
