--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,13 +2,45 @@
 # Don't forget to pin your dependencies!
 # This list will have to be migrated if you wish to use another dependency manager.
 
-ruff~=0.5.0
-pre-commit~=3.7.1
-alembic~=1.13.2
-SQLAlchemy~=2.0.31
-psycopg2~=2.9.9
-psycopg2-binary~=2.9.9
-discord.py~=2.4.0
-pytest~=8.2.2
-mypy~=1.10.1
-
+aiohttp==3.9.5
+aiosignal==1.3.1
+alembic==1.13.2
+attrs==23.2.0
+blinker==1.8.2
+certifi==2024.7.4
+cfgv==3.4.0
+charset-normalizer==3.3.2
+click==8.1.7
+discord.py==2.4.0
+distlib==0.3.8
+filelock==3.15.4
+Flask==3.0.3
+frozenlist==1.4.1
+gunicorn==22.0.0
+identify==2.6.0
+idna==3.7
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+Mako==1.3.5
+MarkupSafe==2.1.5
+multidict==6.0.5
+mypy==1.10.1
+mypy-extensions==1.0.0
+nodeenv==1.9.1
+packaging==24.1
+platformdirs==4.2.2
+pluggy==1.5.0
+pre-commit==3.7.1
+psycopg2-binary==2.9.9
+pytest==8.2.2
+python-dotenv==1.0.1
+PyYAML==6.0.1
+requests==2.32.3
+ruff==0.5.4
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
+urllib3==2.2.2
+virtualenv==20.26.3
+Werkzeug==3.0.3
+yarl==1.9.4
